tests/NormalTests/paczka1/small_fuzzy/51068277.err
Error in line 3: Ofa A512 88,3
Error in line 2: b37qEmVUn6 S527 48,5
Error in line 8: 5ogCIxagE A5'2 5','
Error in line 5: 5ogCIxagE S998 14,9
